<?xml version="1.0"?>
<package format="2">
  <name>autopilot</name>
  <version>1.0.0</version>
  <description>The autopilot node</description>
  <maintainer email="kjwill555@gmail.com">Kyle Williams</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actuators</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
