<?xml version="1.0"?>
<package format="2">
  <name>keyboard_teleop</name>
  <version>1.0.0</version>
  <description>Teleop node to control the car with the keyboard</description>
  <maintainer email="kjwill555@gmail.com">Kyle Williams</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
